bk_ida/gccida/g1/splice_child_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5508:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5508:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5532:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5540:13: error: expected ';' after expression
rtx = ( rtx)val_addr[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5552:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtx[1] != 10 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5553:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5569:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5577:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)rtx[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5590:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5609:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5610:1: error: use of undeclared identifier 'v9'
v9 = die_attr->dw_attr_val.v.val_addr; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5611:7: error: use of undeclared identifier 'v9'
if ( !v9 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5613:37: error: use of undeclared identifier 'v9'
die_parent = (  struct die_struct *)v9[1].fld[0].rtwint; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5636:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5657:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5679:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5700:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5727:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/dwarf2out.c:5741:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5055, "splice_child_die"); 
                             ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/splice_child_die/src/obj/dwarf2out.o] Error 1
